# universal_hardware_timer

./: CMakeLists.txt  README.md  library.properties
docs/: Implement.md  Support.md
include/: hardware_timer.h  hardware_timer_test.h  universal_hardware_timer.h  universal_hardware_timer_test.h
src/: hardware_timer.c  hardware_timer_priv.h  universal_hardware_timer.h  universal_hardware_timer_test.h
src/avr/: hardware_timer_avr.c  hardware_timer_avr.h  hardware_timer_avr_atmega328p.h
src/esp32/: hardware_timer_esp32.c
src/generic/: hardware_timer_generic.c
src/pico/: board_pico_timer.c
src/private/: hardware_timer_callback.c  hardware_timer_config.c  hardware_timer_priv.c  hardware_timer_priv.h  hardware_timer_stat.c
src/test_hardware_timer/: hardware_timer_test_common.c  hardware_timer_test_delay.c  hardware_timer_test_priv.c  hardware_timer_test_priv.h
src/test_hardware_timer/test_print/: hardware_timer_print_printf.c  hardware_timer_print_serial.cpp
